// login.js
output.login = {
    username: 'username',
    password: 'password',
    enter: 'login',
    titulo: 'Capivara Amiga'
}