// perfil.js
output.perfil = {
    botaoPerfil: 'br.com.cdntv.capivaraamiga:id/navigation_dashboard',
    capivaraImagem: 'br.com.cdntv.capivaraamiga:id/imageView2',
    tituloLogado: 'Olá Capivara Amiga',
    botaoSair: 'br.com.cdntv.capivaraamiga:id/bt_exit',
    textoBotao: 'SAIR'
}